wrappers/delphi/garry/garry.pas


  @_garry_config_default := GetProcedureAddress(GarryLibHandle, 'garry_config_default');
  @_garry_database_create := GetProcedureAddress(GarryLibHandle, 'garry_database_create');
  @_garry_database_create_with_config := GetProcedureAddress(GarryLibHandle, 'garry_database_create_with_config');
  @_garry_database_open := GetProcedureAddress(GarryLibHandle, 'garry_database_open');
  @_garry_database_close := GetProcedureAddress(GarryLibHandle, 'garry_database_close');
  @_garry_txn_begin := GetProcedureAddress(GarryLibHandle, 'garry_txn_begin');
  @_garry_txn_commit := GetProcedureAddress(GarryLibHandle, 'garry_txn_commit');
  @_garry_txn_rollback := GetProcedureAddress(GarryLibHandle, 'garry_txn_rollback');
  @_garry_get := GetProcedureAddress(GarryLibHandle, 'garry_get');
  @_garry_set := GetProcedureAddress(GarryLibHandle, 'garry_set');
  @_garry_delete := GetProcedureAddress(GarryLibHandle, 'garry_delete');
  @_garry_get_default := GetProcedureAddress(GarryLibHandle, 'garry_get_default');
  @_garry_data := GetProcedureAddress(GarryLibHandle, 'garry_data');
  @_garry_first := GetProcedureAddress(GarryLibHandle, 'garry_first');
  @_garry_last := GetProcedureAddress(GarryLibHandle, 'garry_last');
  @_garry_next_key := GetProcedureAddress(GarryLibHandle, 'garry_next_key');
  @_garry_prev_key := GetProcedureAddress(GarryLibHandle, 'garry_prev_key');
  @_garry_exists := GetProcedureAddress(GarryLibHandle, 'garry_exists');
  @_garry_count := GetProcedureAddress(GarryLibHandle, 'garry_count');
  @_garry_cursor_open := GetProcedureAddress(GarryLibHandle, 'garry_cursor_open');
  @_garry_cursor_next := GetProcedureAddress(GarryLibHandle, 'garry_cursor_next');
  @_garry_cursor_next_key := GetProcedureAddress(GarryLibHandle, 'garry_cursor_next_key');
  @_garry_cursor_close := GetProcedureAddress(GarryLibHandle, 'garry_cursor_close');
  @_garry_for_each := GetProcedureAddress(GarryLibHandle, 'garry_for_each');
  @_garry_key_split := GetProcedureAddress(GarryLibHandle, 'garry_key_split');
  @_garry_key_unsplit := GetProcedureAddress(GarryLibHandle, 'garry_key_unsplit');
  @_garry_make_key := GetProcedureAddress(GarryLibHandle, 'garry_make_key');
  @_garry_make_key_parts := GetProcedureAddress(GarryLibHandle, 'garry_make_key_parts');
  @_garry_empty_byte_array := GetProcedureAddress(GarryLibHandle, 'garry_empty_byte_array');
  @_garry_make_key_2 := GetProcedureAddress(GarryLibHandle, 'garry_make_key_2');
  @_garry_make_key_3 := GetProcedureAddress(GarryLibHandle, 'garry_make_key_3');
  @_garry_make_key_4 := GetProcedureAddress(GarryLibHandle, 'garry_make_key_4');
  @_garry_encode_key_tuple := GetProcedureAddress(GarryLibHandle, 'garry_encode_key_tuple');
  @_garry_byte_compare := GetProcedureAddress(GarryLibHandle, 'garry_byte_compare');
  @_garry_set_str := GetProcedureAddress(GarryLibHandle, 'garry_set_str');
  @_garry_get_str := GetProcedureAddress(GarryLibHandle, 'garry_get_str');
  @_garry_strerror := GetProcedureAddress(GarryLibHandle, 'garry_strerror');
end;

function garry_config_default: TGarryConfig; cdecl;
begin
  LoadGarryLib;
  if Assigned(_garry_config_default) then
    Result := _garry_config_default
  else
    FillChar(Result, SizeOf(Result), 0);
end;

function garry_database_create(Path: PAnsiChar): PGarryDatabaseHandle; cdecl;
begin
  LoadGarryLib;
  if Assigned(_garry_database_create) then
    Result := _garry_database_create(Path)
  else
    Result := nil;
end;

function garry_database_create_with_config(Path: PAnsiChar;
  const Config: TGarryConfig): PGarryDatabaseHandle; cdecl;
begin
  LoadGarryLib;
  if Assigned(_garry_database_create_with_config) then
    Result := _garry_database_create_with_config(Path, Config)
  else
    Result := nil;
end;

function garry_database_open(Path: PAnsiChar): PGarryDatabaseHandle; cdecl;
begin
  LoadGarryLib;
  if Assigned(_garry_database_open) then
    Result := _garry_database_open(Path)
  else
    Result := nil;
end;

procedure garry_database_close(DB: PGarryDatabaseHandle); cdecl;
begin
  if Assigned(_garry_database_close) then
    _garry_database_close(DB);
end;

function garry_txn_begin(DB: PGarryDatabaseHandle): Integer; cdecl;
begin
  if Assigned(_garry_txn_begin) then
    Result := _garry_txn_begin(DB)
  else
    Result := 0;
end;

procedure garry_txn_commit(DB: PGarryDatabaseHandle; Txn: Integer); cdecl;
begin
  if Assigned(_garry_txn_commit) then
    _garry_txn_commit(DB, Txn);
end;

procedure garry_txn_rollback(DB: PGarryDatabaseHandle; Txn: Integer); cdecl;
begin
  if Assigned(_garry_txn_rollback) then
    _garry_txn_rollback(DB, Txn);
end;

function garry_get(DB: PGarryDatabaseHandle; Txn: Integer;
  const Key: PByte; KeyLen: Integer;
  Value: PByte; var ValueLen: Integer): TGarryStatus; cdecl;
begin
  if Assigned(_garry_get) then
    Result := _garry_get(DB, Txn, Key, KeyLen, Value, ValueLen)
  else
    Result := GarryErrIO;
end;

function garry_set(DB: PGarryDatabaseHandle; Txn: Integer;
  const Key: PByte; KeyLen: Integer;
  const Value: PByte; ValueLen: Integer): TGarryStatus; cdecl;
begin
  if Assigned(_garry_set) then
    Result := _garry_set(DB, Txn, Key, KeyLen, Value, ValueLen)
  else
    Result := GarryErrIO;
end;

function garry_delete(DB: PGarryDatabaseHandle; Txn: Integer;
  const Key: PByte; KeyLen: Integer): TGarryStatus; cdecl;
begin
  if Assigned(_garry_delete) then
    Result := _garry_delete(DB, Txn, Key, KeyLen)
  else
    Result := GarryErrIO;
end;

function garry_get_default(DB: PGarryDatabaseHandle; Txn: Integer;
  const Key: PByte; KeyLen: Integer;
  const Def: PByte; DefLen: Integer;
  Value: PByte; var ValueLen: Integer): TGarryStatus; cdecl;
begin
  if Assigned(_garry_get_default) then
    Result := _garry_get_default(DB, Txn, Key, KeyLen, Def, DefLen, Value, ValueLen)
  else
    Result := GarryErrIO;
end;

function garry_data(DB: PGarryDatabaseHandle; Txn: Integer;
  const Key: PByte; KeyLen: Integer): Integer; cdecl;
begin
  if Assigned(_garry_data) then
    Result := _garry_data(DB, Txn, Key, KeyLen)
  else
    Result := 0;
end;

function garry_first(DB: PGarryDatabaseHandle; Txn: Integer;
  Key: PByte; var KeyLen: Integer): Boolean; cdecl;
begin
  if Assigned(_garry_first) then
    Result := _garry_first(DB, Txn, Key, KeyLen)
  else
    Result := False;
end;

function garry_last(DB: PGarryDatabaseHandle; Txn: Integer;
  Key: PByte; var KeyLen: Integer): Boolean; cdecl;
begin
  if Assigned(_garry_last) then
    Result := _garry_last(DB, Txn, Key, KeyLen)
  else
    Result := False;
end;

function garry_next_key(DB: PGarryDatabaseHandle; Txn: Integer;
  const After: PByte; AfterLen: Integer;
  Key: PByte; var KeyLen: Integer): Boolean; cdecl;
begin
  if Assigned(_garry_next_key) then
    Result := _garry_next_key(DB, Txn, After, AfterLen, Key, KeyLen)
  else
    Result := False;
end;

function garry_prev_key(DB: PGarryDatabaseHandle; Txn: Integer;
  const Before: PByte; BeforeLen: Integer;
  Key: PByte; var KeyLen: Integer): Boolean; cdecl;
begin
  if Assigned(_garry_prev_key) then
    Result := _garry_prev_key(DB, Txn, Before, BeforeLen, Key, KeyLen)
  else
    Result := False;
end;

function garry_exists(DB: PGarryDatabaseHandle; Txn: Integer;
  const Key: PByte; KeyLen: Integer): Boolean; cdecl;
begin
  if Assigned(_garry_exists) then
    Result := _garry_exists(DB, Txn, Key, KeyLen)
  else
    Result := False;
end;

function garry_count(DB: PGarryDatabaseHandle; Txn: Integer): Integer; cdecl;
begin
  if Assigned(_garry_count) then
    Result := _garry_count(DB, Txn)
  else
    Result := 0;
end;

function garry_cursor_open(DB: PGarryDatabaseHandle; Txn: Integer;
  const Prefix: PByte; PrefixLen: Integer): PGarryCursorHandle; cdecl;
begin
  if Assigned(_garry_cursor_open) then
    Result := _garry_cursor_open(DB, Txn, Prefix, PrefixLen)
  else
    Result := nil;
end;

function garry_cursor_next(Cursor: PGarryCursorHandle;
  Key: PByte; var KeyLen: Integer;
  Value: PByte; var ValueLen: Integer): Boolean; cdecl;
begin
  if Assigned(_garry_cursor_next) then
    Result := _garry_cursor_next(Cursor, Key, KeyLen, Value, ValueLen)
  else
    Result := False;
end;

function garry_cursor_next_key(Cursor: PGarryCursorHandle;
  Key: PByte; var KeyLen: Integer): Boolean; cdecl;
begin
  if Assigned(_garry_cursor_next_key) then
    Result := _garry_cursor_next_key(Cursor, Key, KeyLen)
  else
    Result := False;
end;

procedure garry_cursor_close(Cursor: PGarryCursorHandle); cdecl;
begin
  if Assigned(_garry_cursor_close) then
    _garry_cursor_close(Cursor);
end;

procedure garry_for_each(DB: PGarryDatabaseHandle; Txn: Integer;
  const Prefix: PByte; PrefixLen: Integer;
  Visitor: TGarryVisitor; UserData: Pointer); cdecl;
begin
  if Assigned(_garry_for_each) then
    _garry_for_each(DB, Txn, Prefix, PrefixLen, Visitor, UserData);
end;

function garry_key_split(Str: PAnsiChar; Delimiter: AnsiChar;
  OutBuf: PByte): Integer; cdecl;
begin
  if Assigned(_garry_key_split) then
    Result := _garry_key_split(Str, Delimiter, OutBuf)
  else
    Result := 0;
end;

function garry_key_unsplit(const Key: PByte; KeyLen: Integer;
  Delimiter: AnsiChar; OutStr: PAnsiChar; OutSize: Integer): Integer; cdecl;
begin
  if Assigned(_garry_key_unsplit) then
    Result := _garry_key_unsplit(Key, KeyLen, Delimiter, OutStr, OutSize)
  else
    Result := 0;
end;

function garry_make_key(Str: PAnsiChar; OutBuf: PByte): Integer; cdecl;
begin
  if Assigned(_garry_make_key) then
    Result := _garry_make_key(Str, OutBuf)
  else
    Result := 0;
end;

function garry_make_key_parts(Parts: PPAnsiChar; Count: Integer;
  OutBuf: PByte): Integer; cdecl;
begin
  if Assigned(_garry_make_key_parts) then
    Result := _garry_make_key_parts(Parts, Count, OutBuf)
  else
    Result := 0;
end;

procedure garry_empty_byte_array(OutBuf: PByte); cdecl;
begin
  if Assigned(_garry_empty_byte_array) then
    _garry_empty_byte_array(OutBuf);
end;

function garry_make_key_2(P1, P2: PAnsiChar): TGarryKeyTuple; cdecl;
begin
  if Assigned(_garry_make_key_2) then
    Result := _garry_make_key_2(P1, P2)
  else
    FillChar(Result, SizeOf(Result), 0);
end;

function garry_make_key_3(P1, P2, P3: PAnsiChar): TGarryKeyTuple; cdecl;
begin
  if Assigned(_garry_make_key_3) then
    Result := _garry_make_key_3(P1, P2, P3)
  else
    FillChar(Result, SizeOf(Result), 0);
end;

function garry_make_key_4(P1, P2, P3, P4: PAnsiChar): TGarryKeyTuple; cdecl;
begin
  if Assigned(_garry_make_key_4) then
    Result := _garry_make_key_4(P1, P2, P3, P4)
  else
    FillChar(Result, SizeOf(Result), 0);
end;

procedure garry_encode_key_tuple(const T: PGarryKeyTuple; OutBuf: PByte); cdecl;
begin
  if Assigned(_garry_encode_key_tuple) then
    _garry_encode_key_tuple(T, OutBuf);
end;

function garry_byte_compare(const A: PByte; ALen: Integer;
  const B: PByte; BLen: Integer): Integer; cdecl;
begin
  if Assigned(_garry_byte_compare) then
    Result := _garry_byte_compare(A, ALen, B, BLen)
  else
    Result := 0;
end;

function garry_set_str(DB: PGarryDatabaseHandle; Txn: Integer;
  Key: PAnsiChar; Value: PAnsiChar): TGarryStatus; cdecl;
begin
  if Assigned(_garry_set_str) then
    Result := _garry_set_str(DB, Txn, Key, Value)
  else
    Result := GarryErrIO;
end;

function garry_get_str(DB: PGarryDatabaseHandle; Txn: Integer;
  Key: PAnsiChar; Value: PAnsiChar; ValueSize: Integer): TGarryStatus; cdecl;
begin
  if Assigned(_garry_get_str) then
    Result := _garry_get_str(DB, Txn, Key, Value, ValueSize)
  else
    Result := GarryErrIO;
end;

function garry_strerror(Status: TGarryStatus): PAnsiChar; cdecl;
begin
  if Assigned(_garry_strerror) then
    Result := _garry_strerror(Status)
  else
    Result := 'library not loaded';
end;

{ TGarryDatabase }
